service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-app-svc
spec:
  type: LoadBalancer
  selector:
    app: my-nginx-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
