route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: my-nginx-route
spec:
  to:
    kind: Service
    name: my-nginx-app-svc
  port:
    targetPort: http
